--- a/Index.html
+++ b/Index.html
@@ -1,27 +1,6 @@
-<center><h1>Proxy Made By Ozzy</h1>
+<center><h1>Proxy Made By Nick eh 30</h1>
 <form method="POST" action="/service/gateway"><input name="url"><br><input type="submit"></form>
-
-  
-
-</center>
-<div class="snowlord-devConsole-container showing">
-	<div class="snowlord-devConsole-container-nav">
-		<a class="snowlord-devConsole-container-nav-elementViewer" style="float: left;">🔍</a>
-
-		<a class="snowlord-devConsole-container-nav-elementEditor" style="float: left;">✎</a>
-
-		<a name="snowlord-devConsole-container-body-elements" style="float: left;">Elements</a>
-
-		<a name="snowlord-devConsole-container-body-console" style="float: left;">Console</a>
-
-		<a name="snowlord-devConsole-container-body-sources" style="float: left;">Sources</a>
-
-		<a name="snowlord-devConsole-container-body-tools" style="float: left;">Tools</a>
-
-		<a name="snowlord-devConsole-container-body-settings" style="float: left;">Settings</a>
-
-		<a class="snowlord-devConsole-container-body-exit" style="float: right;">🗙</a>
-
+	
 	</div>
 
 	
@@ -34,28 +13,18 @@
 
 		</div>
 
-		
-		<div class="snowlord-devConsole-container-body-console hidden">
-			<div class="snowlord-devConsole-container-body-console-text" style="user-select: auto;">
-				<div class="snowlord-devConsole-container-body-console-messages">
-					<span style="color: #bababa; user-select: none;">⮞2:10:47 </span>
-
-					<span style="color: #000;">Console has loaded!</span>
 
 				</div>
 
 			</div>
 
-			<div class="snowlord-devConsole-container-body-console-commands">
-				<textarea id="snowlord-devConsole-container-body-console-input" placeholder="console.log('Hello World!');" style="resize: horizontal; position: sticky; width: 100%; height: 90%; outline: none; border: none;"></textarea>
-
+			
 			</div>
 
 		</div>
 
 		
-		<div class="snowlord-devConsole-container-body-sources showing">
-			<div class="snowlord-devConsole-container-body-sources-scripts" style="padding-left: 10px;">
+		
 				<h3 style="border-bottom: 2px solid #000;">Page <a class="snowlord-devConsole-container-body-sources-scripts-reload" style="cursor: pointer; color: #0a68ff; user-select: none;">↺</a>
 </h3>
 
